@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2004/01/24 22:59:48 jmmv Exp $
-@comment this plist intentionally left empty
